--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,19 @@
    HTML content. To learn how to do something, just try searching Google for questions like
    "how to change link color." */
 
+
+  @font-face {
+    font-family: SDVBold;
+    src: url("/fonts/svbold.otf");
+  }
+
+
 body {
   background-color: white;
   color: black;
   font-family: Verdana;
+}
+
+h1 {
+  font-family: SDVBold;
 }
