--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,8 @@ body {
 }
 
 h1 {
-  font-family: SDVBold;
+  font-family: Brush Script MT;
   text-align: center;
+  color: transparent;
+  background-image: url("img/texting.gif")
 }
