--- a/public/style.css
+++ b/public/style.css
@@ -19,5 +19,5 @@ h1 {
   font-family: Brush Script MT;
   text-align: center;
   color: transparent;
-  background-image: url("img/texting.gif")
+  background-image: url("img/textbg.gif")
 }
