--- a/public/style.css
+++ b/public/style.css
@@ -16,8 +16,8 @@ body {
 }
 
 h1 {
-  font-family: Brush Script MT;
+  font: Brush Script MT;
   text-align: center;
   color: transparent;
-  background-image: url("img/textbg.gif")
+  background-image: url("img/textbg.gif");
 }
