--- a/under the hood (cafe latte theme)/style.css
+++ b/under the hood (cafe latte theme)/style.css
@@ -10,7 +10,7 @@
 
     --font-family-main: Arial, Helvetica, sans-serif;
     --font-family-headings: Georgia, 'Times New Roman', serif;
-}
+
 
     --content-max-width: 800px;
     --border-main: 3px solid var(--color-body-text);
@@ -30,6 +30,8 @@
 body {
     min-height: 100vh;
     line-height: 1.5;
+    margin: 0;
+    padding: 0;
     font-family: var(--font-family-main);
     color: var(--color-body-text);
     background-color: var(--color-body-background);
@@ -45,7 +47,7 @@ a {
 }
 
 input, textarea, select {
-    max-width: 100%;
+    max-width: var(--content-max-width);
     border: 0.12em solid var(--color-body-text);
     background-color: var(--color-content-background);
     font: inherit;
@@ -133,10 +135,13 @@ input, textarea, select {
 
 
 /* Main content */
-main {
+.box {
+    display: flex;
+    flex-wrap: wrap;
     background-color: var(--color-content-background);
     font-size: 1.2em;
-    padding: 20px 25px 35px;
+    margin: 20px 0;
+    padding: 20px;
     border: var(--border-main);
     border-radius: var(--border-radius-main);
     box-shadow: var(--shadow-main);
@@ -155,7 +160,7 @@ main * + * {
 .footer {
     text-align: center;
     background-color: var(--color-content-background);
-    padding: 18px 25px;
+    padding: 20px 25px 35px;
     border: var(--border-main);
     border-radius: var(--border-radius-main);
     box-shadow: var(--shadow-main);
