--- a/under the hood (cafe latte theme)/style.css
+++ b/under the hood (cafe latte theme)/style.css
@@ -8,8 +8,8 @@
     --color-heading: light-dark(hsl(299, 19.4%, 42%), hsl(299, 19.4%, 80%));
     --color-link: light-dark(hsl(119, 19.4%, 40%), hsl(119, 19.4%, 70%));
 
-    --font-family-main: 'Atkinson Hyperlegible', Helvetica, sans-serif;
-    --font-family-headings: 'Atkinson Hyperlegible', Georgia, 'Times New Roman', serif;
+    --font-family-main: 'Atkinson Hyperlegible', 'Helvetica', sans-serif;
+    --font-family-headings: 'Atkinson Hyperlegible', 'Georgia', 'Times New Roman', serif;
 
     --content-max-width: 800px;
     --border-main: 3px solid var(--color-body-text);
