--- a/public/style.css
+++ b/public/style.css
@@ -8,30 +8,13 @@
     --color-heading: light-dark(hsl(299, 19.4%, 42%), hsl(299, 19.4%, 80%));
     --color-link: light-dark(hsl(119, 19.4%, 40%), hsl(119, 19.4%, 70%));
 
-    --font-family-main: 'Hyperlegible Mono', 'Helvetica', sans-serif;
-    --font-family-headings: 'Hyperlegible Next', 'Georgia', 'Times New Roman', serif;
-    --font-family-sdv: 'svbold', 'Atkinson Hyperlegible', 'Georgia', serif
+    --font-family-main: Arial, Helvetica, sans-serif;
+    --font-family-headings: Georgia, 'Times New Roman', serif;
 
     --content-max-width: 800px;
     --border-main: 3px solid var(--color-body-text);
     --border-radius-main: 10px;
-    --shadow-main: 2px 2px 4px rgba(54,69,79,0.4);
-}
-
-/* Fonts */
-@font-face {
-    font-family: sdvbold;
-    src: url("fonts/svbold.otf") format("opentype");
-}
-
-@font-face {
-    font-family: Hyperlegible Next;
-    src: url("fonts/AHNext.otf") format("opentype");
-}
-
-@font-face {
-    font-family: Hyperlegible Mono;
-    src: url("fonts/AHMono.otf") format("opentype");
+    --shadow-main: 1px 1px hsl(348, 100%, 10%);
 }
 
 /* General styling */
@@ -78,6 +61,7 @@ input, textarea, select {
 /* Project Buttons (div class="projects") */
 
 .projects {
+
     background-color: var(--color-body-background);
     padding: 8px 15px;
     border: var(--border-main);
@@ -87,21 +71,12 @@ input, textarea, select {
 
 .projects h5, .projects a {
     text-align: center;
-    max-width: 100%;
     color: hsl(299, 19.4%, 42.4%);
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
-/* Inner Boxes (div class="inner__boxbox") */
-
-.inner__box {
-    font-size-adjust: inherit;
-    padding: 8px 15px;
-    border: var(--border-main);
-    border-radius: var(--border-radius-main);
-}
 
 /* Layout container */
 .container {
@@ -185,6 +160,8 @@ main * + * {
 
 /* Footer */
 .footer {
+    font-size: 0.5em;
+    text-size-adjust: auto;
     text-align: center;
     background-color: var(--color-content-background);
     padding: 20px 25px 35px;
@@ -194,10 +171,6 @@ main * + * {
 }
 footer * + * {
     margin-block-start: 0.5em;
-}
-
-footer p {
-  font-size: 20px;
 }
 
 /* Skip to content button */
@@ -221,97 +194,3 @@ footer p {
     top: 0;
     transition: top 0.3s ease;
 }
-
-/* Stardew Valley Crop Calculator sdvcalc.html */
-
-#crop-form legend, #crop-form fieldset {
-    background-color: var(--color-content-background);
-    border: 2px solid var(--color-body-text);
-    border-radius: var(--border-radius-main);
-    padding: 10px;
-}
-
-#crop-form legend {
-  font-weight: bold;
-}
-
-#crop-form label, .crop-row {
-  color: var(--color-body-text);
-  font-size: 15px;
-  font-weight: normal;
-  font-family: var(--font-family-main);
-}
-
-
-/* Letter Formatting */
-
-#sdvcalc-title {
-    font-family: var(--font-family-sdv);
-    color: var(--color-title);;
-    background-color: var(--color-content-background);
-    padding: 8px 15px;
-    margin: 5px 5px;
-    border: 2px solid var(--color-body-text);
-    border-radius: var(--border-radius-main);
-    font-size: 40px;
-    text-align: center;
-}
-
-#sdv-legend {
-    font-size: 25px;
-    font-family: var(--font-family-headings);
-    color: var(--color-heading);
- }
- 
- #disclaimer {
-    color: var(--color-body-text);
-    background-color: var(--color-content-background);
-    font-size: 15px;
-    padding: 5px 10px;
-    border: 2px solid var(--color-body-text);
-    border-radius: var(--border-radius-main);
- }
- 
-/* Accent Color */
-
-#lvl, input[type='radio'], input[type='checkbox'], .crop-row {
-  accent-color: var(--color-title);
-}
- 
-/* Range Slider (Farming Skill Lvl) */
-
-#lvl {
-  width: 100%;
-  height: 25px;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-}
-
-#lvl::hover {
-  opacity: 1;
-}
-
-
-/* Season Radio Buttons */
-
-.radio-align {
-  display: flex;
-  flex-direction: row;
-}
-
-.radio-align input {
-  margin-top: 15px;
-}
-
-.radio-align label {
-  width: 100%;
-  padding: 12px;
-}
-
-#crop-form button {
-  
-}
-
-
