--- a/public/style.css
+++ b/public/style.css
@@ -141,6 +141,7 @@ input, textarea, select {
     font-size: 1.5em;
     font-weight: bold;
     padding: 8px 15px;
+    margin: auto;
     border: var(--border-main);
     border-radius: var(--border-radius-main);
     box-shadow: var(--shadow-main);
