--- a/public/style.css
+++ b/public/style.css
@@ -217,3 +217,94 @@ footer * + * {
     top: 0;
     transition: top 0.3s ease;
 }
+
+/* Stardew Valley Crop Calculator sdvcalc.html */
+
+#crop-form legend, #crop-form fieldset {
+    background-color: var(--color-content-background);
+    border: 2px solid var(--color-body-text);
+    border-radius: var(--border-radius-main);
+    padding: 10px;
+}
+
+#crop-form legend {
+  font-weight: bold;
+}
+
+#crop-form label, .crop-row {
+  color: var(--color-body-text);
+  font-size: 15px;
+  font-weight: normal;
+  font-family: var(--font-family-main);
+}
+
+
+/* Letter Formatting */
+
+#sdvcalc-title {
+    color: var(--color-title);;
+    background-color: var(--color-content-background);
+    padding: 8px 15px;
+    margin: 5px 5px;
+    border: 2px solid var(--color-body-text);
+    border-radius: var(--border-radius-main);
+    font-size: 40px;
+    text-align: center;
+}
+
+#sdv-legend {
+    font-size: 25px;
+    font-family: var(--font-family-headings);
+    color: var(--color-heading);
+ }
+ 
+ #disclaimer {
+    color: var(--color-body-text);
+    background-color: var(--color-content-background);
+    font-size: 15px;
+    padding: 5px 10px;
+    border: 2px solid var(--color-body-text);
+    border-radius: var(--border-radius-main);
+ }
+ 
+/* Accent Color */
+
+#lvl, input[type='radio'], input[type='checkbox'], .crop-row {
+  accent-color: var(--color-title);
+}
+ 
+/* Range Slider (Farming Skill Lvl) */
+
+#lvl {
+  width: 100%;
+  height: 25px;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+#lvl::hover {
+  opacity: 1;
+}
+
+
+/* Season Radio Buttons */
+
+.radio-align {
+  display: flex;
+  flex-direction: row;
+}
+
+.radio-align input {
+  margin-top: 15px;
+}
+
+.radio-align label {
+  width: 100%;
+  padding: 12px;
+}
+
+#crop-form button {
+  
+}
