--- a/public/style.css
+++ b/public/style.css
@@ -249,6 +249,7 @@ footer * + * {
     border: 2px solid var(--color-body-text);
     border-radius: var(--border-radius-main);
     font-size: 40px;
+    font-family: "SDVBold";
     text-align: center;
 }
 
