--- a/public/style.css
+++ b/public/style.css
@@ -147,7 +147,7 @@ input, textarea, select {
     font-size: 1.5em;
     font-weight: bold;
     padding: 8px 15px;
-    margin: auto;
+    margin: 5px;
     width: 100%;
     height: auto;
     border: var(--border-main);
