border-width nav test

--- a/public/style.css
+++ b/public/style.css
@@ -153,6 +153,7 @@ input, textarea, select {
     border: var(--border-main);
     border-radius: var(--border-radius-main);
     box-shadow: var(--shadow-main);
+    border-width: 100%;
 }
 
 .navbar__links li a:focus {
