--- a/public/style.css
+++ b/public/style.css
@@ -141,7 +141,7 @@ input, textarea, select {
 .navbar__links a {
     background-color: var(--color-content-background);
     color: var(--color-title);
-    display: inline-block;
+    display: block;
     text-decoration: none;
     text-align: center;
     font-size: 1.5em;
