--- a/public/style.css
+++ b/public/style.css
@@ -130,6 +130,10 @@ input, textarea, select {
 /* Navigation bar */
 .navbar {
     display: grid;
+    width: 100%;
+    height: auto;
+    margin: 5px;
+    padding: 8px 15px;
 }
 
 .navbar__links {
@@ -144,7 +148,6 @@ input, textarea, select {
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
-    padding: 8px 15px;
     margin: 5px;
     width: 100%;
     height: auto;
