--- a/public/style.css
+++ b/public/style.css
@@ -129,10 +129,9 @@ input, textarea, select {
 
 /* Navigation bar */
 .navbar {
-    display: grid;
+    display: inline-grid;
     width: 100%;
     height: auto;
-    margin: 5px;
 }
 
 .navbar__links {
@@ -148,7 +147,6 @@ input, textarea, select {
     font-size: 1.5em;
     font-weight: bold;
     padding: 8px 15px;
-    margin: 5px;
     width: 100%;
     height: auto;
     border: var(--border-main);
