--- a/public/style.css
+++ b/public/style.css
@@ -140,6 +140,7 @@ input, textarea, select {
 }
 
 .navbar__links a {
+    display: inline-grid;
     background-color: var(--color-content-background);
     color: var(--color-title);
     text-decoration: none;
