added hr css and added hr add a border between my code block and the next 88x31

--- a/public/style.css
+++ b/public/style.css
@@ -73,6 +73,10 @@ input, textarea, select {
     padding-right: 5px;
 }
 
+hr {
+    border-bottom: var(--border-main);
+}
+
 :focus {
     outline: 0.15em solid var(--color-link);
 }
